unpackaged/main/default/objects/Contact/fields/carouselimage__c.field-meta.xml
<CustomField>
    <fullName>carouselimage__c</fullName>
    <formula>IMAGE(&quot;https://www.lightningdesignsystem.com/assets/images/carousel/carousel-01.jpg&quot;, &quot;carousel&quot;) &amp; &quot; &quot; &amp; BR() &amp; &quot; &quot; &amp; IMAGE(&quot;https://www.lightningdesignsystem.com/assets/images/carousel/carousel-02.jpg&quot;,&quot;carousel&quot;) &amp; &quot; &quot; &amp; BR() &amp; &quot; &quot; &amp;
IMAGE(&quot;https://www.lightningdesignsystem.com/assets/images/carousel/carousel-03.jpg&quot;,&quot;carousel&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>carouselimage</label>
    <type>Text</type>
</CustomField>