unpackaged/main/default/objects/Contact/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <label>Email_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>oral</fullName>
            </value>
            <value>
                <fullName>nonoral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>