unpackaged/main/default/objects/Contact/fields/Expense_Description__c.field-meta.xml
<CustomField>
    <fullName>Expense_Description__c</fullName>
    <label>Expense Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>NonFinancial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>