unpackaged/main/default/objects/Contact/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsPrimary</label>
    <type>Checkbox</type>
</CustomField>