unpackaged/main/default/objects/Contact/fields/Sub__c.field-meta.xml
<CustomField>
    <fullName>Sub__c</fullName>
    <label>Sub</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>