unpackaged/main/default/objects/Contact/recordTypes/DefaulTAccountRecordpage.recordType-meta.xml
<RecordType>
    <fullName>DefaulTAccountRecordpage</fullName>
    <active>true</active>
    <label>DefaulTAccountRecordpage</label>
</RecordType>