unpackaged/main/default/objects/Contact/recordTypes/DefaultRecordType.recordType-meta.xml
<RecordType>
    <fullName>DefaultRecordType</fullName>
    <active>true</active>
    <label>DefaultRecordType</label>
</RecordType>